--- a/2.1/app/code/Bus/Rebate/view/frontend/layout/checkout_cart_index.xml
+++ b/2.1/app/code/Bus/Rebate/view/frontend/layout/checkout_cart_index.xml
@@ -14,7 +14,7 @@
 		<item name="children" xsi:type="array">
 		<item name="busrebate" xsi:type="array">
 		<item name="config" xsi:type="array">
-		<item name="title" xsi:type="string" translate="true">Utility Incentives
+		<item name="title" xsi:type="string">Utility Incentives
 		</item>
 		</item>
 		</item>
